feat(config): update theme mode to dark and adjust project settings
Switch default theme mode to dark in `filakit.php`. Update the project name and PHP version in `herd.yml`. Add MariaDB configuration. Exclude `/public/build` from `.gitignore`. Add `pnpm-lock.yaml` and AI-related configuration files.

--- a/herd.yml
+++ b/herd.yml
@@ -1,7 +1,10 @@
-name: filakitv4
-php: '8.4'
+name: filahelpdesk
+php: '8.2'
 secured: true
 aliases: {  }
-services: {  }
+services:
+    mariadb:
+        version: '10.11'
+        port: '3306'
 integrations:
     forge: {  }
